# StarterProject

./: CMakeLists.txt  README.md  conanfile.txt
resources/data/: cube_position.json  cube_texture.json
src/: Application.cpp  Application.h  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Gameplay/: Game.cpp  Game.h
src/Object/: cube.cpp  objmesh.h  skybox.cpp  teapot.cpp  torus.cpp  torus.h  trianglemesh.h
src/Render/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Scene/: Node.cpp  Node.h  Scene.cpp  Scene.h  SceneBase.cpp  SceneBase.h  SceneFBO.cpp  SceneFBO.h  SceneLight.cpp  SceneLight.h  SceneTexture.cpp  SceneTexture.h
src/shader/: discard_sprite.fs  discard_sprite.vs  lamp.fs  lamp.vs  sprite.fs  sprite.vs
src/shader/chapter4/: texture.fs
src/shader/chapter5/: edge.fs
